tests/should_fail/let_struct_too_few_fields.nv
module fail
// Let destructure: struct with too few fields
struct Point { x: Int, y: Int }
let Point { x } = Point(1, 2)
